--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "drifter",
   "displayName": "drifter",
   "description": "A awesome dark theme",
+  "publisher": "DhruvKoli",
   "version": "0.0.1",
   "repository": {
     "type": "git",
